--- a/Resources/Prototypes/Roles/play_time_trackers.yml
+++ b/Resources/Prototypes/Roles/play_time_trackers.yml
@@ -153,3 +153,18 @@
 
 - type: playTimeTracker
   id: JobZookeeper
+
+- type: playTimeTracker
+  id: JobQueen
+- type: playTimeTracker
+  id: JobKing
+- type: playTimeTracker
+  id: JobBishop
+- type: playTimeTracker
+  id: JobHand
+- type: playTimeTracker
+  id: JobLordCommanderOfTheKingsguard
+- type: playTimeTracker
+  id: JobGuard
+- type: playTimeTracker
+  id: JobNun
