--- a/Resources/Prototypes/Andromeda/Roles/Jobs/Civil/chefMD.yml
+++ b/Resources/Prototypes/Andromeda/Roles/Jobs/Civil/chefMD.yml
@@ -2,11 +2,7 @@
   id: ChefMD
   name: job-name-chef
   description: job-description-chef
-  playTimeTracker: JobChef
-  requirements:
-    - !type:CharacterDepartmentTimeRequirement
-      department: Civilian
-      min: 3600 #DeltaV 1 hour
+  playTimeTracker: JobChefMD
   startingGear: ChefGear
   icon: "JobIconChef"
   supervisors: job-supervisors-hop
@@ -17,12 +13,6 @@
   extendedAccess:
     - Hydroponics
     - Bar #Nyano - Summary: After this line, Professional Che is a component to be added. Very important.
-  special:
-    - !type:AddComponentSpecial
-      components:
-        - type: ProfessionalChef #Nyano - End Summary.
-        - type: GrantCqc # Goobstation - Martial Arts
-          isBlocked: true # Goobstation - Martial Arts
 
 - type: startingGear
   id: ChefGear
