--- a/Resources/Prototypes/Andromeda/Roles/Jobs/Command/Baroness.yml
+++ b/Resources/Prototypes/Andromeda/Roles/Jobs/Command/Baroness.yml
@@ -1,7 +1,7 @@
 - type: job
-  id: Queen
-  name: job-name-queen
-  description: job-description-queen
+  id: Baroness
+  name: job-name-baroness
+  description: job-description-baroness
   playTimeTracker: JobQueen
   antagAdvantage: 6 # DeltaV - Reduced TC: Head of Staff
   weight: 10 # DeltaV - Changed HoP weight from 20 to 10 due to them not being more important than other Heads
