--- a/Resources/Prototypes/Andromeda/Roles/Jobs/Market/Miner.yml
+++ b/Resources/Prototypes/Andromeda/Roles/Jobs/Market/Miner.yml
@@ -2,13 +2,7 @@
   id: Miner
   name: job-name-miner
   description: job-description-miner
-  playTimeTracker: JobSalvageSpecialist
-  requirements:
-    - !type:CharacterDepartmentTimeRequirement
-      department: Logistics # DeltaV - Logistics Department replacing Cargo
-      min: 21600 #DeltaV 6 hrs
-  #  - !type:OverallPlaytimeRequirement #DeltaV
-  #    time: 36000 #10 hrs
+  playTimeTracker: JobMiner
   icon: "JobIconShaftMiner"
   startingGear: SalvageSpecialistGear
   supervisors: job-supervisors-qm
