--- a/Resources/Prototypes/Andromeda/Roles/Jobs/departments.yml
+++ b/Resources/Prototypes/Andromeda/Roles/Jobs/departments.yml
@@ -1,7 +1,7 @@
 - type: department
-  id: Royalty
-  name: department-Royalty
-  description: department-royalty-description
+  id: Council
+  name: department-Council
+  description: department-council-description
   color: "#701442"
   weight: 200
   roles:
@@ -10,6 +10,7 @@
     - Bishop
     - LordCommanderOfTheGuard
     - Hand
+    - Treasurer
 
 - type: department
   id: Kingsguard
@@ -34,14 +35,24 @@
     - Chaplain
     - Nun
     - Inquisitor
+
+- type: department
+  id: Magic Tower
+  name: department-Magic-Tower
+  description: department-magic-tower-description
+  color: "#701442"
+  weight: 197
+  roles:
     - Alchemist
+    - Master Wizard
+    - Wizard
 
 - type: department
   id: Market
   name: department-Market
   description: department-market-description
   color: "#701442"
-  weight: 197
+  weight: 196
   roles:
     - Treasurer
     - Miner
@@ -52,7 +63,7 @@
   name: department-Civil
   description: department-civil-description
   color: "#701442"
-  weight: 197
+  weight: 195
   roles:
     - Executioner
     - ChefMD
@@ -60,3 +71,4 @@
     - Tavernkeeper
     - Bard
     - Maid
+    - Peasant
