--- a/Resources/Prototypes/Entities/Objects/Weapons/Melee/sword.yml
+++ b/Resources/Prototypes/Entities/Objects/Weapons/Melee/sword.yml
@@ -109,6 +109,8 @@
     flavorKind: station-event-random-sentience-flavor-inanimate
     weight: 0.0002 # 5,000 times less likely than 1 regular animal
   - type: PirateAccent
+  - type: Parry
+    sound: /Audio/Items/bikehorn.ogg
     # not putting a BlockMovement component here cause that's funny.
 
 - type: entity
