--- a/Resources/Prototypes/Nuclear14/Entities/Structures/Misc/ladders.yml
+++ b/Resources/Prototypes/Nuclear14/Entities/Structures/Misc/ladders.yml
@@ -40,12 +40,13 @@
     state: ladder_bottom
   - type: Fixtures
     fixtures:
-    - shape:
-        !type:PhysShapeAabb
-        bounds: "-0.25,0,0.25,0.5"
-      density: 60
-      mask:
-      - MachineMask
-      layer:
-      - MidImpassable
-      - LowImpassable
+      fix1:
+        shape:
+          !type:PhysShapeAabb
+          bounds: "-0.25,0,0.25,0.5"
+        density: 60
+        mask:
+        - MachineMask
+        layer:
+        - MidImpassable
+        - LowImpassable
