--- a/Resources/Prototypes/_Andromeda/Roles/Jobs/Civil/Campones.yml
+++ b/Resources/Prototypes/_Andromeda/Roles/Jobs/Civil/Campones.yml
@@ -3,10 +3,22 @@
   name: job-name-peasant
   description: job-description-peasant
   playTimeTracker: JobPeasant
-  startingGear: JanitorMaidGear
+  startingGear: CamponesGear
   icon: "JobIconJanitor"
   supervisors: job-supervisors-hop
   access:
     - Service
     - Janitor
     - Maintenance
+
+- type: startingGear
+  id: CamponesGear
+  equipment:
+    jumpsuit: ClothingUniformJumpsuitCampones1
+    #back: ClothingBackpackMusicianFilled
+    #eyes: ClothingEyesGlassesSunglasses
+    shoes: ClothingShoesBootsLaceup
+    #id: MusicianPDA
+    #ears: ClothingHeadsetService
+  #satchel: ClothingBackpackSatchelMusicianFilled
+  #duffelbag: ClothingBackpackDuffelMusicianFilled
