--- a/Resources/Prototypes/_Andromeda/Roles/Jobs/Civil/Executioner.yml
+++ b/Resources/Prototypes/_Andromeda/Roles/Jobs/Civil/Executioner.yml
@@ -3,7 +3,7 @@
   name: job-name-executioner
   description: job-description-executioner
   playTimeTracker: JobExecutioner
-  startingGear: SecurityOfficerGear
+  startingGear: ExecutionerGear
   icon: "JobIconSecurityOfficer"
   supervisors: job-supervisors-hos
   canBeAntag: false
@@ -19,17 +19,15 @@
       implants: [MindShieldImplant]
 
 - type: startingGear
-  id: SecurityOfficerGear
+  id: ExecutionerGear
   equipment:
-    jumpsuit: ClothingUniformJumpsuitSec
-    back: ClothingBackpackSecurity
-    shoes: ClothingShoesBootsCombatFilled
-    eyes: ClothingEyesGlassesSunglasses
-    head: ClothingHeadHelmetBasic
-    outerClothing: ClothingOuterArmorPlateCarrier # DeltaV - ClothingOuterArmorBasic replaced in favour of plate carrier
-    id: SecurityPDA
-    ears: ClothingHeadsetSecurity
-    belt: ClothingBeltSecurityFilled
-  innerClothingSkirt: ClothingUniformJumpskirtSec
-  satchel: ClothingBackpackSatchelSecurity
-  duffelbag: ClothingBackpackDuffelSecurity
+    jumpsuit: ClothingUniformJumpskirtCampones2
+    #back: ClothingBackpackMusicianFilled
+    #eyes: ClothingEyesGlassesSunglasses
+    shoes: ClothingShoesBootsLaceup
+    #id: MusicianPDA
+    #ears: ClothingHeadsetService
+    #outerClothing: ClothingOuterApronChef
+    #belt: ClothingBeltChefFilled
+  #satchel: ClothingBackpackSatchelMusicianFilled
+  #duffelbag: ClothingBackpackDuffelMusicianFilled
