--- a/Resources/Prototypes/_Andromeda/Roles/Jobs/Civil/jester.yml
+++ b/Resources/Prototypes/_Andromeda/Roles/Jobs/Civil/jester.yml
@@ -27,18 +27,18 @@
     - !type:AddImplantSpecial
       implants: [SadTromboneImplant]
 
-- type: startingGear
-  id: ClownGear
-  subGear:
-    - ClownPlasmamanGear
-  equipment:
-    jumpsuit: ClothingUniformJumpsuitClown
-    back: ClothingBackpackClownFilled
-    shoes: ClothingShoesClown
-    mask: ClothingMaskClown
-    pocket1: BikeHorn
-    pocket2: ClownRecorder
-    id: ClownPDA
-    ears: ClothingHeadsetService
-  satchel: ClothingBackpackSatchelClownFilled
-  duffelbag: ClothingBackpackDuffelClownFilled
+#- type: startingGear
+#  id: ClownGear
+#  subGear:
+#    - ClownPlasmamanGear
+#  equipment:
+#    jumpsuit: ClothingUniformJumpsuitClown
+#    back: ClothingBackpackClownFilled
+#    shoes: ClothingShoesClown
+#    mask: ClothingMaskClown
+#    pocket1: BikeHorn
+#    pocket2: ClownRecorder
+#    id: ClownPDA
+#    ears: ClothingHeadsetService
+#  satchel: ClothingBackpackSatchelClownFilled
+#  duffelbag: ClothingBackpackDuffelClownFilled
