--- a/Resources/Prototypes/_Andromeda/Roles/Jobs/Clergy/Bishop.yml
+++ b/Resources/Prototypes/_Andromeda/Roles/Jobs/Clergy/Bishop.yml
@@ -5,7 +5,7 @@
   playTimeTracker: JobBishop
   antagAdvantage: 6 # DeltaV - Reduced TC: Head of Staff
   weight: 10 # DeltaV - Changed HoP weight from 20 to 10 due to them not being more important than other Heads
-  startingGear: HoPGear
+  startingGear: BishopGear
   icon: "JobIconHeadOfPersonnel"
   requireAdminNotify: true
   supervisors: job-supervisors-captain
@@ -19,25 +19,11 @@
     - Janitor
     - Theatre
     - Kitchen
-    #  - Chapel
     - Hydroponics
     - External
     - Cryogenics
-    # I mean they'll give themselves the rest of the access levels *anyways*.
-    # As of 15/03/23 they can't do that so here's MOST of the rest of the access levels.
-    # Head level access that isn't their own was deliberately left out, get AA from the captain instead.
-    # Delta V - fuck all of this HoP is a service role
-    #  - Chemistry
-    #  - Engineering
-    #  - Research
-    #  - Detective
-    #  - Salvage
-    #  - Security # NoooOoOo!! My HoPcurity!1
-    #  - Brig
     - Lawyer
     - Cargo
-    #  - Atmospherics
-    #  - Medical
     - Boxer # DeltaV - Add Boxer access
     - Clown # DeltaV - Add Clown access
     - Library # DeltaV - Add Library access
@@ -53,13 +39,15 @@
         - type: CommandStaff
 
 - type: startingGear
-  id: HoPGear
+  id: BishopGear
   equipment:
-    jumpsuit: ClothingUniformJumpsuitHoP
-    back: ClothingBackpackHOPFilled
-    shoes: ClothingShoesLeather # DeltaV - HoP needs something better than plebe shoes.
-    id: HoPPDA
-    ears: ClothingHeadsetHoP # DeltaV - HoP is now a service role, replaces their all channels headset.
-  innerClothingSkirt: ClothingUniformJumpskirtHoP
-  satchel: ClothingBackpackSatchelHOPFilled
-  duffelbag: ClothingBackpackDuffelHOPFilled
+    jumpsuit: ClothingUniformJumpskirtCampones2
+    #back: ClothingBackpackMusicianFilled
+    #eyes: ClothingEyesGlassesSunglasses
+    shoes: ClothingShoesBootsLaceup
+    #id: MusicianPDA
+    #ears: ClothingHeadsetService
+    #outerClothing: ClothingOuterApronChef
+    #belt: ClothingBeltChefFilled
+  #satchel: ClothingBackpackSatchelMusicianFilled
+  #duffelbag: ClothingBackpackDuffelMusicianFilled
