--- a/Resources/Prototypes/_Andromeda/Roles/Jobs/Command/Queen.yml
+++ b/Resources/Prototypes/_Andromeda/Roles/Jobs/Command/Queen.yml
@@ -1,11 +1,11 @@
 - type: job
-  id: Baroness
-  name: job-name-baroness
-  description: job-description-baroness
+  id: Queen
+  name: job-name-queen
+  description: job-description-queen
   playTimeTracker: JobQueen
   antagAdvantage: 6 # DeltaV - Reduced TC: Head of Staff
   weight: 10 # DeltaV - Changed HoP weight from 20 to 10 due to them not being more important than other Heads
-  startingGear: HoPGear
+  startingGear: QueenGear
   icon: "JobIconHeadOfPersonnel"
   requireAdminNotify: true
   supervisors: job-supervisors-captain
@@ -53,13 +53,16 @@
         - type: CommandStaff
 
 - type: startingGear
-  id: HoPGear
+  id: QueenGear
   equipment:
-    jumpsuit: ClothingUniformJumpsuitHoP
-    back: ClothingBackpackHOPFilled
-    shoes: ClothingShoesLeather # DeltaV - HoP needs something better than plebe shoes.
-    id: HoPPDA
-    ears: ClothingHeadsetHoP # DeltaV - HoP is now a service role, replaces their all channels headset.
-  innerClothingSkirt: ClothingUniformJumpskirtHoP
-  satchel: ClothingBackpackSatchelHOPFilled
-  duffelbag: ClothingBackpackDuffelHOPFilled
+    jumpsuit: ClothingUniformJumpskirtCampones2
+    #back: ClothingBackpackMusicianFilled
+    #eyes: ClothingEyesGlassesSunglasses
+    shoes: ClothingShoesBootsLaceup
+    #id: MusicianPDA
+    #ears: ClothingHeadsetService
+    #outerClothing: ClothingOuterApronChef
+    #belt: ClothingBeltChefFilled
+  #satchel: ClothingBackpackSatchelMusicianFilled
+  #duffelbag: ClothingBackpackDuffelMusicianFilled
+
