--- a/Resources/Prototypes/_Andromeda/Roles/Jobs/departments.yml
+++ b/Resources/Prototypes/_Andromeda/Roles/Jobs/departments.yml
@@ -5,8 +5,8 @@
   color: "#701442"
   weight: 200
   roles:
-    - Baron
-    - Baroness
+    - King
+    - Queen
     - Bishop
     - LordCommanderOfTheGuard
     - Hand
@@ -44,7 +44,7 @@
   weight: 197
   roles:
     - Alchemist
-    - Master Wizard
+    - MasterWizard
     - Wizard
 
 - type: department
