--- a/Resources/Prototypes/_CE/Maps/Test.yml
+++ b/Resources/Prototypes/_CE/Maps/Test.yml
@@ -37,4 +37,4 @@
           mapNameTemplate: "ZLEVEL"
         - type: StationJobs
           availableJobs:
-            Baron: [ -1, -1 ]
+            King: [ -1, -1 ]
