--- a/Resources/Prototypes/Entities/Objects/Consumable/Food/produce.yml
+++ b/Resources/Prototypes/Entities/Objects/Consumable/Food/produce.yml
@@ -25,6 +25,7 @@
   id: FoodProduceBase
   abstract: true
   components:
+  - type: PerishableFood # Andromeda Medieval
   - type: SolutionContainerManager
   - type: Sprite
     state: produce
